# spec

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  Contributing.md  LICENSE  README.md  WASM-specs.bib  core  deploy_key  deploy_key.enc  deploy_key.pub  dune-project  genindex.html  index.html  macros.html  objects.inv  opam  search.html  searchindex.js  w3c.json  wasm-specs.bib
interpreter/: .gitignore  .merlin  LICENSE  Makefile  README.md  _tags  bstack.js  critic.js  d.ast.patch  d.patch  dune  dune-project  emscripten.wasm  emscripten.wast  error.wast  filesystem.c  filesystem.idl  filesystem.json  filesystem.wasm  float.wasm  floattest.wast  fs-script.sh  gen-tests.sh  looping.c  maintest.wast  merkleize.c  mytest.wast  runtests.py  runtests.sh  syscallstubs.c  testinput.json  vm.c  wasm.opam  winmake.bat
interpreter/aux/: sexpr.ml  sexpr.mli  source.ml  source.mli
interpreter/binary/: decode.ml  decode.mli  dune  encode.ml  encode.mli  utf8.ml  utf8.mli
interpreter/custom/: custom.ml  handler_branch_hint.ml  handler_custom.ml  handler_custom.mli  handler_name.ml  handler_name.mli
interpreter/exec/: convert.ml  convert.mli  dune  eval.ml  eval.mli  eval_num.ml  eval_num.mli  eval_numeric.ml  eval_numeric.mli  eval_simd.ml  eval_simd.mli  eval_vec.ml  eval_vec.mli  f32.ml  f32_convert.ml  f32_convert.mli  f64.ml  f64_convert.ml  f64_convert.mli  float.ml  fxx.ml  i16.ml  i32.ml  i32_convert.ml  i32_convert.mli  i64.ml  i64_convert.ml  i64_convert.mli  i8.ml  instance.ml  int.ml  ixx.ml  memory.ml  memory.mli  simd.ml  v128.ml  v128.mli  vector.ml
interpreter/execution/: float.ml
interpreter/findlib/: META
interpreter/host/: dune  env.ml  flags.ml  global.ml  import.ml  import.mli  js.ml  main.ml  run.ml  spectest.ml
interpreter/host/import/: env.ml  spectest.ml
interpreter/jslib/: build.sh  dune  package.json  wasm.ml  wast.ml
interpreter/main/: dune  flags.ml  main.ml
interpreter/merkle/: LICENCE  README.md  addglobals.ml  buildstack.ml  byteutil.ml  compiler.ml  counter.ml  critical.ml  elimglobals.ml  evallocation.ml  genMerkle.ml  handlenan.ml  input.ml  intfloat.ml  mbinary.ml  merge.ml  merkle.ml  monad.ml  mproof.ml  mrun.ml  shiftmem.ml  underscore.ml
interpreter/meta/jslib/: bsconfig.json  build.sh  wasm.ml  (+1 more)
interpreter/runtime/: aggr.ml  aggr.mli  data.ml  data.mli  dune  elem.ml  elem.mli  event.ml  event.mli  exn.ml  exn.mli  extern.ml  extern.mli  func.ml  func.mli  global.ml  global.mli  i31.ml  i31.mli  instance.ml  mem.ml  mem.mli  memory.ml  memory.mli  rtt.ml  rtt.mli  table.ml  table.mli  tag.ml  tag.mli  value.ml
interpreter/script/: dune  embed.ml  import.ml  import.mli  js.ml  js.mli  run.ml  run.mli  runner.ml  runner.mli  script.ml
interpreter/spec/: ast.ml  decode.ml  decode.mli  encode.ml  encode.mli  eval.ml  eval.mli  eval_numeric.ml  eval_numeric.mli  f32.ml  f64.ml  f64_convert.ml  float.ml  i32_convert.mli  i64_convert.ml  memory.ml  memory.mli  table.mli  types.ml  utf8.ml  utf8.mli  valid.ml
interpreter/syntax/: ast.ml  dune  free.ml  free.mli  mnemonics.ml  operators.ml  pack.ml  types.ml  values.ml
interpreter/test/: call_indirect.wast  custom_section.wast  imports.wast  memory.wast
interpreter/tests/: dune  smallint.ml
interpreter/text/: annot.ml  annot.mli  arrange.ml  arrange.mli  dune  lexer.mli  lexer.mll  parse.ml  parse.mli  parse_error.ml  parser.mly  print.ml  print.mli  script.ml
interpreter/travis/: build-test.sh  install-ocaml.sh
interpreter/unittest/: smallint.ml
interpreter/util/: dune  error.mli  lib.ml  lib.mli  sexpr.mli  source.ml  source.mli
interpreter/valid/: dune  match.ml  match.mli  valid.ml  valid.mli
interpreter/validation/: valid.ml
spectec/: .gitignore  Makefile  README.md  a.out  dune-project  flake.nix  save  tmp
spectec/doc/: Assumptions.md  EL.md  IL.md  Intepreter.md  Interpreter.md  Language.md  Latex.md  Overview.md  Prose.md  README.md  Splicing.md  Usage.md
spectec/spec/: 0-aux.watsup  1-syntax.watsup  2-aux.watsup  2-syntax-aux.watsup  3-numerics.watsup  3-typing.watsup  4-numerics.watsup  4-runtime.watsup  5-numerics.watsup  5-reduction.watsup  5-runtime-aux.watsup  5-runtime.watsup  6-reduction.watsup  6-typing.watsup  7-module.watsup  7-runtime-grow.watsup  7-runtime-typing.watsup  8-reduction.watsup  8-test.watsup  9-module.watsup  A-binary.watsup  README.md  TEST.md  aux.spasm  dune  reduction.spasm  reduction.watsup  runtime.spasm  runtime.watsup  syntax.spasm  typing.spasm
spectec/src/: ;Noh  Makefile  dune
spectec/test-frontend/: Makefile  TEST.md  dune  test.spectec  test.watsup
spectec/test-interpreter/: Makefile  TEST.md  dune  sample.wast  sample.wat  spec-test-3
spectec/test-latex/: .gitignore  Makefile  TEST.md  conf.py  dune  spec-gen-wasm-2.0.tex  spec-gen.include-wasm-1.0.tex  spec-gen.include-wasm-2.0.tex  spec-gen.include-wasm-3.0.tex  spec-gen.include.tex  spec-gen.tex  spec-main.tex  spec-sphinx-in.rst  spec-sphinx.in.rst  spec-sphinx.rst  spec-splice-in.tex  spec-splice.in.tex  spec-splice.tex  spec.tex  test.spectec  test.watsup
spectec/test-middlend/: Makefile  TEST.md  dune  dune.inc  specification.00-elab.exp  specification.01-typefamily-removal.exp  specification.02-remove-indexed-types.exp  specification.03-totalize.exp  specification.04-else.exp  specification.05-sideconditions.exp  specification.05-uncase-removal.exp  specification.06-sideconditions.exp  specification.06-sub.exp  specification.07-alias-demut.exp  specification.07-sub-expansion.exp  specification.07-sub.exp  specification.08-alias-demut.exp  specification.08-sub.exp  specification.09-alias-demut.exp  specification.10-improve-ids.exp  test.spectec  test.spectec.exp
spectec/test-prose/: .gitignore  Makefile  TEST.md  before_animation.md  conf.py  dune  exec-in.rst  header.rst  helper-in.rst  index.rst  macros.def  mathdef.py  prose-in.rst  sample.wast  valid-in.rst
spectec/test-splice/: .gitignore  Makefile  TEST.md  dune  spec-latex.in.tex  spec-sphinx-in.rst  spec-sphinx.in.rst  spec-splice-in.tex  spec-splice.in.tex
(+2176 files in other folders)
