(lang dune 2.8)

(implicit_transitive_deps false)

(name wasm)

(license Apache-2.0)

(authors "TODO")

(maintainers "TODO")

(source
 (github WebAssembly/spec))

(generate_opam_files true)

(package
 (name wasm)
 (synopsis "WebAssembly library")
 (description "A library for writing/reading/running WebAssembly binaries.")
 (tags
  (wasm webassembly spec interpreter))
 (depends
  (ocaml
   (>= 4.05))))
