(lang dune 2.9)

(name wasm)

(generate_opam_files true)

(license Apache-2.0)

(source
  (github WebAssembly/spec))

(authors "Andreas Rossberg <rossberg@mpi-sws.org")
(maintainers "Andreas Rossberg <rossberg@mpi-sws.org")

(package
  (name wasm)
  (synopsis "Library to read and write WebAssembly (Wasm) files and manipulate their AST")
  (tags (wasm webassembly spec interpreter))
  (depends
    (ocaml (>= 4.12))))
