(library
 (name exec_basic)
 (wrapped false)
 (modules f32 f64 fxx i32 i64 ixx)
 (libraries util))

(library
 (name exec_convert)
 (wrapped false)
 (modules f32_convert f64_convert i8 i16 i32_convert i64_convert v128)
 (libraries exec_basic syntax_types util))

(library
 (name exec)
 (wrapped false)
 (modules eval eval_num eval_vec)
 (libraries
  binary
  exec_basic
  exec_convert
  runtime
  syntax
  syntax_types
  syntax_values
  util))
