(library
 (name syntax_types)
 (wrapped false)
 (modules types)
 (libraries exec_basic util))

(library
 (name syntax_values)
 (wrapped false)
 (modules values)
 (libraries exec_basic exec_convert syntax_types util))

(library
 (name syntax)
 (wrapped false)
 (modules ast free operators)
 (libraries exec_basic exec_convert syntax_types syntax_values util))
