(library
 (name text)
 (wrapped false)
 (libraries
  binary
  exec_basic
  exec_convert
  runtime
  script
  syntax
  syntax_types
  syntax_values
  util))

; we don't use the `ocamllex` stanza directly as there's no way to pass the `-ml`
; if we don't pass `-ml` we have a transition table overflow...

(rule
 (target lexer.ml)
 (deps lexer.mll)
 (action
  (chdir
   %{workspace_root}
   (run %{bin:ocamllex} -q -ml -o %{target} %{deps}))))

(ocamlyacc
 (modules parser))
