(library
  (name spectec)
  (modules)
  (libraries
    (re_export util)
    (re_export el)
    (re_export il)
    (re_export frontend)
    (re_export middlend)
    (re_export backend_latex)
    (re_export backend_prose)
    (re_export backend_splice)
    (re_export backend_interpreter)
    (re_export il2al)
  )
)
