(include_subdirs unqualified)
(library
  (name reference_interpreter)
  (modules :standard))

; For parsing
(subdir
 text
 (rule
  (target lexer.ml)
  (deps lexer.mll)
  (action
   (chdir
    %{workspace_root}
    (run %{bin:ocamllex} -ml -q -o %{target} %{deps}))))
 (ocamlyacc
  (modules parser)))

(env
 (_
  (flags
   (-w +a-4-27-42-44-45-70 -warn-error +a-3))))

